Refactor task imports to use ansible.builtin.import_tasks
- Replaced 'include' with 'ansible.builtin.import_tasks' across various task files for improved clarity and compatibility.
- Updated task definitions in elasticsearch configuration files to maintain consistency.

--- a/tasks/elasticsearch-plugins.yml
+++ b/tasks/elasticsearch-plugins.yml
@@ -1,5 +1,4 @@
 ---
-
 # es_plugins_reinstall will be set to true if elasticsearch_install_from_repo.changed or elasticsearch_install_from_package.changed
 # i.e. we have changed ES version(or we have clean installation of ES), or if no plugins listed. Otherwise it is false and requires explicitly setting.
 - name: set fact es_plugins_reinstall to true
@@ -28,7 +27,7 @@
   environment:
     CONF_DIR: "{{ es_conf_dir }}"
     ES_PATH_CONF: "{{ es_conf_dir }}"
-    ES_INCLUDE: "{{ default_file }}"
+    ES_ansible.builtin.import_tasks: "{{ default_file }}"
   check_mode: no
 
 #if es_plugins_reinstall is set to true we remove ALL plugins
@@ -61,7 +60,7 @@
   environment:
     CONF_DIR: "{{ es_conf_dir }}"
     ES_PATH_CONF: "{{ es_conf_dir }}"
-    ES_INCLUDE: "{{ default_file }}"
+    ES_ansible.builtin.import_tasks: "{{ default_file }}"
 
 - name: Install elasticsearch plugins
   become: yes
@@ -74,7 +73,7 @@
   environment:
     CONF_DIR: "{{ es_conf_dir }}"
     ES_PATH_CONF: "{{ es_conf_dir }}"
-    ES_INCLUDE: "{{ default_file }}"
+    ES_ansible.builtin.import_tasks: "{{ default_file }}"
   until: plugin_installed.rc|default(0) == 0
   retries: 5
   delay: 5
