--- a/tasks/elasticsearch-Debian.yml
+++ b/tasks/elasticsearch-Debian.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: set fact force_install to no
   set_fact: force_install=no
 
@@ -10,62 +9,61 @@
 - name: Gracefully stop and remove elasticsearch package if switching between OSS and standard
   become: yes
   block:
-  - name: Check if the elasticsearch package is installed
-    shell: "dpkg-query -W -f'${Status}' {{ es_other_package_name }}"
-    register: elasticsearch_package
-    failed_when: False
-    changed_when: False
-    check_mode: no
+    - name: Check if the elasticsearch package is installed
+      shell: "dpkg-query -W -f'${Status}' {{ es_other_package_name }}"
+      register: elasticsearch_package
+      failed_when: False
+      changed_when: False
+      check_mode: no
 
-  - name: unhold elasticsearch package when switching to a different package type
-    become: yes
-    dpkg_selections:
-      name: "{{ es_other_package_name }}"
-      selection: "install"
-    when: elasticsearch_package.stdout == 'install ok installed'
+    - name: unhold elasticsearch package when switching to a different package type
+      become: yes
+      dpkg_selections:
+        name: "{{ es_other_package_name }}"
+        selection: "install"
+      when: elasticsearch_package.stdout == 'install ok installed'
 
-  - name: stop elasticsearch
-    service:
-      name: 'elasticsearch'
-      state: stopped
-    when: elasticsearch_package.stdout == 'install ok installed'
+    - name: stop elasticsearch
+      service:
+        name: "elasticsearch"
+        state: stopped
+      when: elasticsearch_package.stdout == 'install ok installed'
 
-  - name: Debian - Remove elasticsearch package if we are switching to a different package type
-    apt:
-      name: '{{ es_other_package_name }}'
-      state: absent
-    when: elasticsearch_package.stdout == 'install ok installed'
-
+    - name: Debian - Remove elasticsearch package if we are switching to a different package type
+      apt:
+        name: "{{ es_other_package_name }}"
+        state: absent
+      when: elasticsearch_package.stdout == 'install ok installed'
 
 - name: Install Elasticsearch repository
   when: es_use_repository
   become: yes
   block:
-  - name: Debian - Install apt-transport-https to support https APT downloads
-    apt:
-      name: apt-transport-https
-      state: present
+    - name: Debian - Install apt-transport-https to support https APT downloads
+      apt:
+        name: apt-transport-https
+        state: present
 
-  - name: Debian - Add Elasticsearch repository key
-    apt_key:
-      url: '{{ es_apt_key }}'
-      id: '{{ es_apt_key_id }}'
-      state: present
-    when: es_add_repository and es_apt_key | string
+    - name: Debian - Add Elasticsearch repository key
+      apt_key:
+        url: "{{ es_apt_key }}"
+        id: "{{ es_apt_key_id }}"
+        state: present
+      when: es_add_repository and es_apt_key | string
 
-  - name: Debian - Add elasticsearch repository
-    apt_repository:
-      repo: '{{ item.repo }}'
-      state: '{{ item.state }}'
-    when: es_add_repository
-    with_items:
-      - { repo: "{{ es_apt_url_old }}", state: "absent" }
-      - { repo: "{{ es_apt_url }}", state: "present" }
-      - { repo: "{{ es_other_apt_url }}", state: "absent" }
+    - name: Debian - Add elasticsearch repository
+      apt_repository:
+        repo: "{{ item.repo }}"
+        state: "{{ item.state }}"
+      when: es_add_repository
+      with_items:
+        - { repo: "{{ es_apt_url_old }}", state: "absent" }
+        - { repo: "{{ es_apt_url }}", state: "present" }
+        - { repo: "{{ es_other_apt_url }}", state: "absent" }
 
 - name: Include optional user and group creation.
   when: (es_user_id is defined) and (es_group_id is defined)
-  include: elasticsearch-optional-user.yml
+  ansible.builtin.import_tasks: elasticsearch-optional-user.yml
 
 - name: Debian - Get installed elasticsearch version
   command: dpkg-query --showformat='${Version}' --show {{ es_package_name }}
@@ -86,7 +84,7 @@
   apt:
     name: '{{ es_package_name }}{% if es_version is defined and es_version != "" %}={{ es_version }}{% endif %}'
     state: present
-    force: '{{ force_install }}'
+    force: "{{ force_install }}"
     allow_unauthenticated: "{{ 'no' if es_apt_key else 'yes' }}"
     cache_valid_time: 86400
   when: es_use_repository
