--- a/tasks/elasticsearch-RedHat.yml
+++ b/tasks/elasticsearch-RedHat.yml
@@ -14,29 +14,29 @@
 - name: RedHat - add Elasticsearch repo
   become: yes
   template:
-    src: 'elasticsearch.repo'
-    dest: '/etc/yum.repos.d/elasticsearch-{{ es_repo_name }}.repo'
+    src: "elasticsearch.repo"
+    dest: "/etc/yum.repos.d/elasticsearch-{{ es_repo_name }}.repo"
   when: es_use_repository and es_add_repository
 
 - name: RedHat - remove unused Elasticsearch repo
   become: yes
   file:
-    path: '/etc/yum.repos.d/elasticsearch-{{ es_other_repo_name }}.repo'
+    path: "/etc/yum.repos.d/elasticsearch-{{ es_other_repo_name }}.repo"
     state: absent
   when: es_use_repository
 
 - name: RedHat - include versionlock
-  include: elasticsearch-RedHat-version-lock.yml
+  ansible.builtin.import_tasks: elasticsearch-RedHat-version-lock.yml
 
 - name: RedHat - Remove the other elasticsearch package if switching between OSS and standard
   become: yes
   yum:
-    name: '{{ es_other_package_name }}'
-    state: 'absent'
+    name: "{{ es_other_package_name }}"
+    state: "absent"
 
 - name: Include optional user and group creation.
   when: (es_user_id is defined) and (es_group_id is defined)
-  include: elasticsearch-optional-user.yml
+  ansible.builtin.import_tasks: elasticsearch-optional-user.yml
 
 - name: RedHat - Install Elasticsearch
   become: yes
@@ -44,7 +44,7 @@
     name: '{{ es_package_name }}{% if es_version is defined and es_version != ""  %}-{{ es_version }}{% endif %}'
     state: present
     update_cache: yes
-    allow_downgrade: '{{ allow_downgrade }}'
+    allow_downgrade: "{{ allow_downgrade }}"
   when: es_use_repository and not ansible_check_mode
   register: redhat_elasticsearch_install_from_repo
   notify: restart elasticsearch
@@ -61,7 +61,7 @@
 - name: RedHat - Install Elasticsearch from url
   become: yes
   yum:
-    name: '{% if es_custom_package_url is defined %}{{ es_custom_package_url }}{% else %}{{ es_rpm_url }}{% endif %}'
+    name: "{% if es_custom_package_url is defined %}{{ es_custom_package_url }}{% else %}{{ es_rpm_url }}{% endif %}"
     state: present
   when: not es_use_repository
   register: elasticsearch_install_from_package
