--- a/tasks/xpack/elasticsearch-xpack.yml
+++ b/tasks/xpack/elasticsearch-xpack.yml
@@ -1,14 +1,13 @@
 ---
-
 #Security configuration
 - name: include security/elasticsearch-security.yml
-  include: security/elasticsearch-security.yml
+  ansible.builtin.import_tasks: security/elasticsearch-security.yml
   when: not oss_version
 
 #Make sure elasticsearch.keystore has correct Permissions
 - name: Set elasticsearch.keystore Permissions
   become: yes
-  file: 
+  file:
     state: file
     path: "{{ es_conf_dir }}/elasticsearch.keystore"
     owner: root
