--- a/tasks/elasticsearch-plugins.yml
+++ b/tasks/elasticsearch-plugins.yml
@@ -19,7 +19,7 @@
 
 #List currently installed plugins. We have to list the directories as the list commmand fails if the ES version is different than the plugin version.
 - name: Check installed elasticsearch plugins
-  become: yes
+  become: true
   shell: "ls {{es_home}}/plugins {{list_command}}"
   register: installed_plugins
   changed_when: False
@@ -52,7 +52,7 @@
 
 # This removes any currently installed plugins (to prevent errors when reinstalling)
 - name: Remove elasticsearch plugins
-  become: yes
+  become: true
   command: "{{es_home}}/bin/elasticsearch-plugin remove {{item}} --silent"
   with_items: "{{ plugins_to_remove | default([]) }}"
   notify: restart elasticsearch
@@ -63,7 +63,7 @@
     ES_ansible.builtin.import_tasks: "{{ default_file }}"
 
 - name: Install elasticsearch plugins
-  become: yes
+  become: true
   command: "{{es_home}}/bin/elasticsearch-plugin install {{ item.url | default(item.plugin) }} --batch --silent"
   register: plugin_installed
   changed_when: plugin_installed.rc|default(0) == 0
