--- a/tasks/elasticsearch-ssl.yml
+++ b/tasks/elasticsearch-ssl.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: set fact es_same_keystore
   set_fact: es_same_keystore=false
 
@@ -8,7 +7,7 @@
   when: es_ssl_keystore == es_ssl_truststore
 
 - name: Ensure certificate directory exists
-  become: yes
+  become: true
   file:
     dest: "{{ es_ssl_certificate_path }}"
     state: directory
@@ -18,7 +17,7 @@
   when: es_ssl_upload
 
 - name: Upload SSL/TLS keystore
-  become: yes
+  become: true
   copy:
     src: "{{ es_ssl_keystore }}"
     dest: "{{ es_ssl_certificate_path }}/{{ es_ssl_keystore | basename }}"
@@ -30,7 +29,7 @@
   register: copy_keystore
 
 - name: Upload SSL/TLS truststore
-  become: yes
+  become: true
   copy:
     src: "{{ es_ssl_truststore }}"
     dest: "{{ es_ssl_certificate_path }}/{{ es_ssl_truststore | basename }}"
@@ -42,7 +41,7 @@
   register: copy_truststore
 
 - name: Upload SSL/TLS key and certificate
-  become: yes
+  become: true
   copy:
     src: "{{ item }}"
     dest: "{{ es_ssl_certificate_path }}/{{ item | basename }}"
@@ -58,7 +57,7 @@
   register: copy_certificates
 
 - name: Upload SSL Certificate Authority
-  become: yes
+  become: true
   copy:
     src: "{{ es_ssl_certificate_authority }}"
     dest: "{{ es_ssl_certificate_path }}/{{ es_ssl_certificate_authority | basename }}"
@@ -70,7 +69,7 @@
   when: es_ssl_upload and (es_ssl_certificate_authority is defined) and (es_ssl_certificate_authority|length > 0)
 
 - name: Set keystore password
-  become: yes
+  become: true
   shell: echo "{{ es_ssl_keystore_password }}" | {{ es_home }}/bin/elasticsearch-keystore add -x -f 'xpack.security.{{ item }}.ssl.keystore.secure_password'
   no_log: True
   when: es_ssl_keystore_password and (copy_keystore.changed or (es_same_keystore and copy_truststore.changed))
@@ -79,7 +78,7 @@
     - transport
 
 - name: Set truststore password
-  become: yes
+  become: true
   shell: echo "{{ es_ssl_truststore_password }}" | {{ es_home }}/bin/elasticsearch-keystore add -x -f 'xpack.security.{{ item }}.ssl.truststore.secure_password'
   no_log: True
   when: es_ssl_truststore_password and (copy_truststore.changed or (es_same_keystore and copy_keystore.changed))
@@ -88,7 +87,7 @@
     - transport
 
 - name: Remove keystore password
-  become: yes
+  become: true
   shell: "{{ es_home }}/bin/elasticsearch-keystore remove 'xpack.security.{{ item }}.ssl.keystore.secure_password'"
   when: es_ssl_keystore_password == "" and (copy_keystore.changed or (es_same_keystore and copy_truststore.changed))
   ignore_errors: yes
@@ -97,7 +96,7 @@
     - transport
 
 - name: Remove truststore password
-  become: yes
+  become: true
   shell: "{{ es_home }}/bin/elasticsearch-keystore remove 'xpack.security.{{ item }}.ssl.truststore.secure_password'"
   when: es_ssl_truststore_password == "" and (copy_truststore.changed or (es_same_keystore and copy_keystore.changed))
   ignore_errors: yes
@@ -106,7 +105,7 @@
     - transport
 
 - name: Set key password
-  become: yes
+  become: true
   shell: echo "{{ es_ssl_key_password }}" | {{ es_home }}/bin/elasticsearch-keystore add -x -f 'xpack.security.{{ item }}.ssl.secure_key_passphrase'
   no_log: True
   when: es_ssl_key_password and copy_certificates.changed
@@ -115,7 +114,7 @@
     - transport
 
 - name: Remove key password
-  become: yes
+  become: true
   shell: "{{ es_home }}/bin/elasticsearch-keystore remove 'xpack.security.{{ item }}.ssl.secure_key_passphrase'"
   when: es_ssl_key_password == "" and copy_certificates.changed
   ignore_errors: yes
