--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,8 +47,8 @@ es_api_sleep: 15
 es_debian_startup_timeout: 10
 
 # JVM custom parameters
-es_java_home: ''
-es_jvm_custom_parameters: ''
+es_java_home: ""
+es_jvm_custom_parameters: ""
 es_heap_dump_path: "/var/lib/elasticsearch"
 
 # SSL/TLS parameters
@@ -65,6 +65,7 @@ es_ssl_key_password: ""
 es_ssl_certificate: ""
 es_ssl_certificate_authority: ""
 es_ssl_certificate_path: "{{ es_conf_dir }}/certs"
+es_ssl_remote_src: false
 es_ssl_verification_mode: "certificate"
 es_validate_certs: "yes"
 es_delete_unmanaged_file: true
